--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - git clone git://github.com/cptactionhank/sekexe
 
 before_script:
-  - "sekexe/run 'mount -t tmpfs -o size=8g tmpfs /var/lib/docker && docker -d &"
+  - "sekexe/run 'mount -t tmpfs -o size=8g tmpfs /var/lib/docker && docker -d' &"
   - "while ! docker info &> /dev/null ; do sleep 1; done"
 
 script:
