--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
     - SLIRP_PORTS=$(seq 2375 2500)
 
 before_install:
-  - sudo sh -c "wget -qO- https://get.docker.io/gpg | apt-key add -"
-  - sudo su -c "echo deb http://get.docker.io/ubuntu docker main > /etc/apt/sources.list.d/docker.list"
+  - wget -qO- https://get.docker.io/gpg | sudo apt-key add -
+  - echo "deb http://get.docker.io/ubuntu docker main" | sudo tee /etc/apt/sources.list.d/docker.list
   - echo exit 101 | sudo tee /usr/sbin/policy-rc.d
   - sudo chmod +x /usr/sbin/policy-rc.d
 
